--- a/java/pom.xml
+++ b/java/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>usage-formatter</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Usage Formatter</name>
     <description>Writes usage statistics for step definitions</description>
@@ -18,14 +18,14 @@
 
     <properties>
         <project.Automatic-Module-Name>io.cucumber.usageformatter</project.Automatic-Module-Name>
-        <project.build.outputTimestamp>1760538062</project.build.outputTimestamp>
+        <project.build.outputTimestamp>1760538071</project.build.outputTimestamp>
     </properties>
 
     <scm>
         <connection>scm:git:git://github.com/cucumber/usage-formatter.git</connection>
         <developerConnection>scm:git:git@github.com:cucumber/usage-formatter.git</developerConnection>
         <url>git://github.com/cucumber/usage-formatter.git</url>
-        <tag>v0.1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencyManagement>
