--- a/java/pom.xml
+++ b/java/pom.xml
@@ -60,12 +60,12 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>messages</artifactId>
-            <version>[29.0.1,31.0.0)</version>
+            <version>[31.0.0-SNAPSHOT,32.0.0)</version>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>query</artifactId>
-            <version>[14.3.0,15.0.0)</version>
+            <version>[15.0.0-SNAPSHOT,16.0.0)</version>
         </dependency>
 
         <dependency>
