--- a/java/pom.xml
+++ b/java/pom.xml
@@ -17,7 +17,7 @@
     <url>https://github.com/cucumber/usage-formatter</url>
 
     <properties>
-        <project.Automatic-Module-Name>io.cucumber.usageformatter</project.Automatic-Module-Name>
+        <osgi.bundle-symbolic-name>io.cucumber.usageformatter</osgi.bundle-symbolic-name>
         <project.build.outputTimestamp>1760538071</project.build.outputTimestamp>
     </properties>
 
