Revert "Introduce module"
This reverts commit 09838439b199244318c2b1e1f5a4703e3a462de5.

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -17,7 +17,7 @@
     <url>https://github.com/cucumber/usage-formatter</url>
 
     <properties>
-        <osgi.bundle-symbolic-name>io.cucumber.usageformatter</osgi.bundle-symbolic-name>
+        <project.Automatic-Module-Name>io.cucumber.usageformatter</project.Automatic-Module-Name>
         <project.build.outputTimestamp>1760538071</project.build.outputTimestamp>
     </properties>
 
