--- a/java/pom.xml
+++ b/java/pom.xml
@@ -6,18 +6,17 @@
     <parent>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-parent</artifactId>
-        <version>4.6.0</version>
+        <version>5.0.0</version>
     </parent>
 
     <artifactId>usage-formatter</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Usage Formatter</name>
     <description>Writes usage statistics for step definitions</description>
     <url>https://github.com/cucumber/usage-formatter</url>
 
     <properties>
-        <project.Automatic-Module-Name>io.cucumber.usageformatter</project.Automatic-Module-Name>
         <project.build.outputTimestamp>1760538071</project.build.outputTimestamp>
     </properties>
 
@@ -60,12 +59,12 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>messages</artifactId>
-            <version>[29.0.1,31.0.0)</version>
+            <version>[32.0.0,33.0.0)</version>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>query</artifactId>
-            <version>[14.3.0,15.0.0)</version>
+            <version>[15.0.0,16.0.0)</version>
         </dependency>
 
         <dependency>
@@ -98,4 +97,22 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>validate</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
