--- a/java/pom.xml
+++ b/java/pom.xml
@@ -10,21 +10,21 @@
     </parent>
 
     <artifactId>usage-formatter</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.0</version>
     <packaging>jar</packaging>
     <name>Usage Formatter</name>
     <description>Writes usage statistics for step definitions</description>
     <url>https://github.com/cucumber/usage-formatter</url>
 
     <properties>
-        <project.build.outputTimestamp>1760538071</project.build.outputTimestamp>
+        <project.build.outputTimestamp>1769047994</project.build.outputTimestamp>
     </properties>
 
     <scm>
         <connection>scm:git:git://github.com/cucumber/usage-formatter.git</connection>
         <developerConnection>scm:git:git@github.com:cucumber/usage-formatter.git</developerConnection>
         <url>git://github.com/cucumber/usage-formatter.git</url>
-        <tag>HEAD</tag>
+        <tag>v0.2.0</tag>
     </scm>
 
     <dependencyManagement>
